# sdk-nrf

./: .checkpatch.conf  .gitignore  .sonarcloud.properties  .vale.ini  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig.nrf  VERSION  main_merged.c  west.yml
.github/: test-spec.yml
boards/: deprecated.cmake
cmake/: dfu_multi_image.cmake  extensions.cmake  fw_zip.cmake  hpf.cmake  hpf_asm_check.cmake  hpf_asm_install.cmake  mesh_dfu_metadata.cmake  partition_manager.cmake
doc/: CMakeLists.txt  requirements.txt  versions.json
drivers/: CMakeLists.txt  Kconfig
include/: app_jwt.h  audio_defines.h  bl_crypto.h  bl_storage.h  esb.h  flash_map_pm.h
lib/: CMakeLists.txt  Kconfig
modules/: modules.cmake
samples/: CMakeLists.txt  Kconfig
samples/bluetooth/high_throughput_pawr_scan/: CMakeLists.txt  README.md  data.txt  howtorun.txt
samples/bluetooth/high_throughput_pawr_scan/periodic_adv_rsp/: CMakeLists.txt  Kconfig  prj.conf
samples/bluetooth/high_throughput_pawr_scan/periodic_adv_rsp/include/: onboarding_manager.h  pawr_broadcaster.h  pawr_onboarding.h
samples/bluetooth/high_throughput_pawr_scan/periodic_adv_rsp/src/: main.c  onboarding_manager.c  pawr_broadcaster.c
samples/bluetooth/high_throughput_pawr_scan/periodic_sync_rsp/: CMakeLists.txt  prj.conf
samples/bluetooth/high_throughput_pawr_scan/periodic_sync_rsp/src/: main.c
scripts/: generate_psa_key_attributes.py  memory-threshold-list.yaml  ncs-docker-version.txt  partition_manager.py  partition_manager_output.py  quarantine.yaml  quarantine_integration.yaml  quarantine_llvm.yaml  reglock.py  (+14 more)
(+5367 files in other folders)
